fixing spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@ header{
   text-align: center;
   font-size: 2em;
   padding-top: 20px;
-  padding-bottom:70px;
+  padding-bottom:40px;
 }
 #navigation a:link{
   color: black;
